Consultas de los sistemas de recomendaciones realizada

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,7 +44,7 @@
                         <div class="front_name mb-3 ml-3">
                             {{ item.title }}
                         </div>
-                        <div class="flashcard-options">
+                        <div class="flashcard-options" style="margin-top: .5rem; color: #fff; font-size: .75rem;">
                             <p class="mb-2" style="font-size: 1.2rem; font-weight: bold;">Géneros:</p>
                             {% for genre in item.genres %}
                                 <div class="flashcard-option ml-3">
