--- a/templates/pages/recommendation_by_user.html
+++ b/templates/pages/recommendation_by_user.html
@@ -4,7 +4,59 @@
 <div class="container-fluid">
     <h1 class="mt-4">Recomendaciones por usuario</h1>
     <p>Dado el <code>identificador</code> de un usuario se mostrarán las películas que
-        gustaron a usuarios similares al escogido.</p>
-    <!-- rest of the template -->
+        gustaron a usuarios similares al escogido. <b>Advertencia, esta consulta puede tardar
+            unos segundos en ejecutarse. Se ruega tener paciencia.</b></p>
+
+    <div class="form-wrapper p-2" style="background-color: #303536; border-radius: 0.5rem; margin-bottom: 0.5rem;">
+        <form method="POST" role="form" action="{{ url_for('my_routes.recommendation_by_user') }}">
+            <div class="row">
+                <div class="col-md-5">
+                    {{ form.userId.label }}
+                </div>
+                <div class="col-md-5">
+                    {{ form.number.label }}
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-5">
+                    {{ form.userId }}
+                </div>
+                <div class="col-md-5">
+                    {{ form.number }}
+                </div>
+                <div class="col-md-2">
+                    {{ form.submit }}
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div style="background-color: #303536; border-radius: .25rem;">
+        <h4 class="m-2">Respuesta</h4>
+
+        <div class="card-grid d-flex flex-wrap gap-3" >
+            {% for item in response %}
+                <div class="card p-2 m-2" style="box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3); background-color: #4b5556; border-radius: .25rem; min-width: 300px;">
+                    <div class="front">
+                        <div class="front_title">
+                            <p class="mb-2" style="font-size: 1.2rem; font-weight: bold;">Título:</p>
+                        </div>
+                        <div class="front_name mb-3 ml-3">
+                            {{ item.title }}
+                        </div>
+                        <div class="flashcard-options" style="margin-top: .5rem; color: #fff; font-size: .75rem;">
+                            <p class="mb-2" style="font-size: 1.2rem; font-weight: bold;">Géneros:</p>
+                            {% for genre in item.genres %}
+                                <div class="flashcard-option ml-3">
+                                    {{ genre }}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
