--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -39,3 +39,11 @@ body {
 .container-fluid {
     margin-top: 20px;
 }
+
+.custom-checkbox {
+    margin-right: 1rem;
+    background-color: #343a40;
+}
+.custom-checkbox + label {
+    margin-right: 2rem;
+}
